Fix menuTitle top header alignment
Fix menuTitle top header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ span.menu {
 .right-top-header{
     float:right;
     right:0;
-    margin-right: 8px;
+    margin-right: 10px;
 }
 .right-top-header img,
 .slide-menu img{
